--- a/server/k8s/manifests/deployment.yaml
+++ b/server/k8s/manifests/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: social
   labels:
-    app: nginx
+    app: social
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: nginx
+      app: social
   template:
     metadata:
       labels:
-        app: nginx
+        app: social
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: social
+        image: deepanshu091224/social:v1
         ports:
-        - containerPort: 80
+        - containerPort: 9002
