--- a/server/helm/social-chart/values.yaml
+++ b/server/helm/social-chart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: abhishekf5/go-web-app
+  repository: deepanshu091224/social:v1
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v1"
@@ -17,7 +17,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: social.local
       paths:
         - path: /
           pathType: ImplementationSpecific
