--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --no-cache-dir --default-timeout=100 -i https://pypi.org/simple -r app/requirements.txt
+        pip install --no-cache-dir --default-timeout=100 -i https://pypi.org/simple -r server/app/requirements.txt
 
     - name: Run tests
       run: |
