--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: .
-        file: ./Dockerfile
+        file: ./server/Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:${{ github.run_id }}
 
