--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,7 +48,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v6
       with:
-        context: .
+        context: ./server
         file: ./server/Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:${{ github.run_id }}
