--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,7 +51,7 @@ jobs:
         context: ./server
         file: ./server/Dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:${{ github.run_id }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/social:${{ github.run_id }}
 
   update-newtag-in-helm-chart:
     runs-on: ubuntu-latest
@@ -71,6 +71,6 @@ jobs:
       run: |
         git config --global user.email "your-email@example.com"
         git config --global user.name "Your Name"
-        git add helm/fastapi-app-chart/values.yaml
+        git add helm/social-chart/values.yaml
         git commit -m "Update tag in Helm chart"
         git push
