--- a/server/helm/social-chart/values.yaml
+++ b/server/helm/social-chart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: deepanshu091224/social:v1
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v1"
+  tag: "17734177798"
 
 ingress:
   enabled: false
